<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <PreferenceCategory app:title="@string/share_options_title">

        <EditTextPreference
            app:key="@string/subject_key"
            app:title="@string/subject_pref_title"
            app:summary="@string/subject_summary"
        />

        <EditTextPreference
            app:key="@string/text_key"
            app:title="@string/text_pref_title"
            app:summary="@string/text_summary"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/render_options_title"
        app:summary="@string/render_summary">

        <SeekBarPreference
            android:key="@string/sketch_key"
            android:title="@string/sketch_pref_title"
            app:summary="@string/sketch_summary"
            app:showSeekBarValue="true"
            app:defaultValue="15"
            />

        <SeekBarPreference
            android:key="@string/color_key"
            android:title="@string/color_pref_title"
            app:summary="@string/color_summary"
            app:showSeekBarValue="true"
            app:defaultValue="3"
            />


    </PreferenceCategory>



    
</PreferenceScreen>
