<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:title="@string/revert_button"
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_revert"
        app:showAsAction="always"
        />

    <item
        android:title="@string/sketch_button"
        android:id="@+id/action_sketch"
        android:orderInCategory="200"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="always"
        />

    <item
        android:title="@string/colorize_button"
        android:id="@+id/action_colorize"
        android:orderInCategory="300"
        android:icon="@android:drawable/ic_menu_view"
        app:showAsAction="always"
        />

    <item
        android:title="@string/share_button"
        android:id="@+id/action_share"
        android:orderInCategory="400"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="always"
        />

    <item
        android:title="@string/settings_button"
        android:id="@+id/action_settings"
        android:orderInCategory="500"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never"
        tools:ignore="AlwaysShowAction" />

<!--TODO fill these in-->
</menu>
